test/Fail/SyntaxWrongDefinition.err
SyntaxWrongDefinition.agda:4.6-7: error: [Syntax.WrongDefinition]
R has been declared as a record type, but is being defined as a
data type
